# python-voice-assistant

./: Makefile  pyproject.toml
python_voice_assistant/: __main__.py  commands.py  engine.py
